<resources>
    <string name="app_name">UHF</string>
    <string name="home_title_text">Home</string>
    <string name="home_power_text">Handle Battery</string>
    <string name="fast_read_write_text">Quick Reading</string>
    <string name="take_inventory_text">Stock Taking</string>
    <string name="label_operation_text">Tag Operation</string>
    <string name="label_location_text">Tag Locating</string>
    <string name="label_filter_text">Tag Filtering</string>
    <string name="setting_text">Settings</string>
    <string name="label_number_text">Tag Count</string>
    <string name="read_write_number_total">Cumulative Read Count</string>
    <string name="read_write_speed_text">Read Rate</string>
    <string name="read_write_time_text">Read Time</string>
    <string name="start_text">Start</string>
    <string name="stop_text">Pause</string>
    <string name="speed_unit_text">tag(s)/sec</string>
    <string name="cancel_text">Cancel</string>
    <string name="exit_text">Exit</string>
    <string name="sure_back_text">You are reading data. Do you want to exit?</string>
    <string name="choice_text">Select</string>
    <string name="effect_label_text">Valid Tags</string>
    <string name="total_number_text">Cumulative Read Count</string>
    <string name="take_inventory_model_text">Stock Taking Mode</string>
    <string name="start_take_inventory_text">Start</string>
    <string name="stop_take_inventory_text">Stop</string>
    <string name="copy_text">Copy EPC</string>
    <string name="share_text">Share</string>
    <string name="import_excel_text">Export Excel</string>
    <string name="label_num_text">Tag Count</string>
    <string name="label_info_text">Tag Info</string>
    <string name="id_text">ID</string>
    <string name="epc_text">EPC</string>
    <string name="find_number_text">Read Count</string>
    <string name="carrier_frequency_text">Carrier Frequency (MHz)</string>
    <string name="rssi_text">RSSI (dBm)</string>
    <string name="pc_text">PC</string>
    <string name="search_text">Search</string>
    <string name="search_empty_text">No results found</string>
    <string name="light_text">Indicator</string>
    <string name="voice_text">Buzzer</string>
    <string name="location_text">Locate</string>
    <string name="location_doing_text">Stop</string>
    <string name="input_epc_text">Please enter the tag EPC.</string>
    <string name="hint_found_text">Please hold the device and walk around. \n The closer is to the tag, the stronger the signal.</string>
    <string name="strong_text">Strong</string>
    <string name="middle_text">Medium</string>
    <string name="little_text">Weak</string>
    <string name="read_write_text">Read &amp; Write</string>
    <string name="lock_text">Lock</string>
    <string name="destory_text">Kill</string>
    <string name="edit_epc_text">Please enter the tag EPC.</string>
    <string name="edit_label_text">Please enter the tag info.</string>
    <string name="operation_area_text">Operating Bank</string>
    <string name="get_pwd_text">Access Password</string>
    <string name="set_pwd_text">Kill Password</string>
    <string name="edit_pwd_text">Please enter the password</string>
    <string name="start_location_text">Starting Point</string>
    <string name="edit_start_location_text">Please enter the starting point</string>
    <string name="data_length_text">Data Length</string>
    <string name="edit_data_length_text">Please enter the data length</string>
    <string name="data_text">Data</string>
    <string name="read_text">Read</string>
    <string name="write_text">Write</string>
    <string name="set_operation_type_text">Set Operation Mode</string>
    <string name="select_operation_area_text">Select Operating Bank</string>
    <string name="un_lock_text">Unlock</string>
    <string name="data_filter_text">Data Filtering</string>
    <string name="filter1_text">Filter 1</string>
    <string name="filter2_text">Filter 2</string>
    <string name="read_write_block_text">Reading Area</string>
    <string name="offset_text">Offset Position</string>
    <string name="filter_rule_text">Filter Rules</string>
    <string name="target_text">Target</string>
    <string name="hint_offset_text">Please enter the offset position</string>
    <string name="start_filter_text">Enable</string>
    <string name="stop_filter_text">Disable</string>
    <string name="select_session_text">Select Session</string>
    <string name="select_flag_text">Select Inventory Mark</string>
    <string name="filter_rule_1_text">Select Session</string>
    <string name="filter_rule_name_text">Rule %1$d</string>
    <string name="setting_select_label_text">Tag Selection</string>
    <string name="setting_select_handle_text">Handle Selection</string>
    <string name="setting_select_area_text">Region Settings</string>
    <string name="setting_frequency_text">Frequency Settings</string>
    <string name="setting_common_text">Common Settings</string>
    <string name="setting_about_device_text">About Device</string>
    <string name="setting_firmware_update_text">Firmware Upgrade</string>
    <string name="setting_handle_type_text">Handle Trigger</string>
    <string name="setting_handle_reboot_text">Reboot Handle</string>
    <string name="setting_tip_light_text">Indicator Light</string>
    <string name="setting_tip_voice_text">Indicator Sound</string>
    <string name="setting_rf_link_text">RF Link Settings</string>
    <string name="setting_select_handle_type_text">Shortcut Button</string>
    <string name="setting_model_type_text">Module Type</string>
    <string name="setting_area_country_text">Region &amp; Country</string>
    <string name="setting_begin_fq_text">Start Frequency</string>
    <string name="setting_end_fq_text">End Frequency</string>
    <string name="basic_info_text">Basic Info</string>
    <string name="setting_fq_interval_text">Interval of Frequency Points</string>
    <string name="setting_fq_quantity_text">Number of Frequency Points</string>
    <string name="device_sn_text">Device SN</string>
    <string name="firmware_version_text">Firmware Version</string>
    <string name="module_info_text">Module Version</string>
    <string name="module_type_text">Module Type</string>
    <string name="current_degree_text">Module Temperature</string>
    <string name="handle_battery_text">Battery</string>
    <string name="module_type_inner">Built-in Version</string>
    <string name="module_type_china">China</string>
    <string name="module_type_america">US</string>
    <string name="module_type_europe">EU</string>
    <string name="x_mhz">%d MHz</string>
    <string name="battery_voltage_text">Battery Voltage</string>
    <string name="battery_rate_text">Remaining Battery</string>
    <string name="battery_circle_count_text">Cycles</string>
    <string name="battery_charging_status_text">Charge</string>
    <string name="hint_bin_file_text">Please select a file (.bin).</string>
    <string name="retry_choice_text">Reselect</string>
    <string name="update_text">Upgrade</string>
    <string name="reboot_handle_text">Do you want to reboot the UHF handle?</string>
    <string name="sure_text">Yes</string>
    <string name="link_db_text">RF Power (dBm)</string>
    <string name="mode_text">Mode</string>
    <string name="dynamic_power_text">Dynamic Power</string>
    <string name="label_focus_text">Tag Focus</string>
    <string name="inventory_label_text">Inventory Mark</string>
    <string name="custom_text">Custom Mode</string>
    <string name="custom_tip_text">Parameters are adjustable per needs.</string>
    <string name="balance_mode_text">Balance Mode</string>
    <string name="balance_mode_tip_text">Recommended for common usages.</string>
    <string name="speed_mode_text">High-speed Mode</string>
    <string name="speed_mode_tip_text">High-speed reading and also high power consumption.</string>
    <string name="iterator_mode_text">Traversal Mode</string>
    <string name="iterator_mode_tip_text">Each tag will only be read once to quickly read all tags.</string>
    <string name="handle_select_text">Available Handles</string>
    <string name="mode_class_text">Module Model</string>
    <string name="handle_version_text">Serial Number</string>
    <string name="communication_type_text">Communication</string>
    <string name="handle_type_1_text">UHF Reader1</string>
    <string name="handle_type_2_text">UHF Reader2</string>
    <string name="un_charge">Not Charging</string>
    <string name="pre_charge">Pre-charging</string>
    <string name="fast_charge">Quick Charging</string>
    <string name="charge_done">Charged</string>
    <string name="hint_reset_completed">UHF has been rebooted</string>
    <string name="hint_please_check_device_connect">Please check the connection of the UHF handle</string>
    <string name="hint_not_found_tag">No tag matched</string>
    <string name="hint_please_select">Please Select</string>
    <string name="hint_please_auto_set">Custom</string>
    <string name="hint_please_select_opt_area">Please select operating bank</string>
    <string name="hint_please_select_opt_type">Please select operation type</string>
    <string name="hint_please_select_opt_area_country">Please select region and country</string>
    <string name="hint_please_select_opt_start_rf">Please select a start frequency</string>
    <string name="hint_please_select_opt_end_rf">Please select an end frequency</string>
    <string name="hint_please_select_fq_interval">Please select the interval of frequency points</string>
    <string name="hint_please_select_fq_quantity">Please select the number of frequency points</string>
    <string name="hint_operation_failed">Operation failed. Type: 0x%1$x, code: 0x%2$x, info: %3$s</string>
    <string name="hint_operation_success">Operation succeeded</string>
    <string name="hint_tag_read_error">Failed to read tags. Code: 0x%1$x, info: %2$s</string>
    <string name="hint_tag_write_error">Failed to write tags. Code: 0x%1$x, info: %2$s</string>
    <string name="hint_tag_operation_failed">Tag operation failed. Code: 0x%1$x, info: %2$s</string>
    <string name="hint_tag_operation_success">Tag operation succeeded</string>
    <string name="hint_unknow_error">Unknown error</string>
    <string name="param_start_address_error">Start address format error</string>
    <string name="param_data_len_error">Data length format error</string>
    <string name="param_data_error">Written data format error</string>
    <string name="update_progress_ing_text">Upgrading</string>
    <string name="update_success">Upgraded</string>
    <string name="update_failed">Failed to upgrade. Code: 0x%1$x, info: %2$s</string>
    <string name="hint_please_charge">Low battery. Please charge (%d%%).</string>
    <string name="hint_un_charge">Not Charging</string>
    <string name="hint_pre_charge">Pre-charging</string>
    <string name="hint_fast_charge">Quick Charging</string>
    <string name="hint_charge_done">Charged</string>
    <string name="hint_unknow">Unknown</string>
    <string name="percentage_x">%d%%</string>
    <string name="module_template">%d°C</string>
    <string name="battery_voltage">%dmV</string>
    <string name="times_x">%d time(s)</string>
    <string name="please_allow_read_write_sd_card">To export Excel, please enable the permissions to read and write SD card</string>
    <string name="please_input_file_name">Please enter the file name</string>
    <string name="please_take_inventory_before_proceeding">Please take stock before operating</string>
    <string name="please_take_select_before_proceeding">Please select before operating</string>
    <string name="hint_excel_save_to_sd">Excel exported to the SD card</string>
    <string name="hint_copy_epc_clipboard">Copied to the clipboard</string>
    <string name="hint_filter_offset_len">Please enter the correct offset position (0~255)</string>
    <string name="inventory_mode_balance">Balance</string>
</resources>