<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sunmi="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.sunmi.uhf.fragment.operation.LabelOperationModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/epc_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sunmi_88px"
                android:background="@drawable/btn_stoke_shape"
                android:ellipsize="end"
                android:gravity="center|left"
                android:hint="@string/edit_epc_text"
                android:paddingLeft="@dimen/sunmi_24px"
                android:paddingRight="@dimen/sunmi_24px"
                android:singleLine="true"
                android:text="@={vm.epc}"
                android:textColor="@color/majorTextColor"
                android:textSize="@dimen/sunmi_28ps" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/sunmi_1px"
                android:layout_marginTop="@dimen/sunmi_20px"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sunmi_100px"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/operation_area_text"
                    android:textColor="@color/majorTextColor"
                    android:textSize="@dimen/sunmi_32ps" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/right_arrow_icon"
                    android:drawablePadding="@dimen/sunmi_10px"
                    android:text="@={vm.areaData}"
                    android:gravity="center|right"
                    android:onClick="@{()->vm.onOperationAreaClick()}"
                    android:textColor="@color/color_FF858A95"
                    android:textSize="@dimen/sunmi_24ps"
                    tools:text="EPC" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/sunmi_1px"
                android:background="@color/dividerColor" />
            <!--  密码 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sunmi_20px"
                android:text="@string/get_pwd_text"
                android:textColor="@color/majorTextColor"
                android:textSize="@dimen/sunmi_24ps" />

            <EditText
                android:id="@+id/start_add_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sunmi_88px"
                android:layout_marginTop="@dimen/sunmi_10px"
                android:background="@drawable/btn_stoke_shape"
                android:ellipsize="end"
                android:gravity="center|left"
                android:hint="@string/edit_pwd_text"
                android:paddingLeft="@dimen/sunmi_24px"
                android:paddingRight="@dimen/sunmi_24px"
                android:singleLine="true"
                android:text="@={vm.pwd}"
                android:textColor="@color/majorTextColor"
                android:textSize="@dimen/sunmi_28ps" />
            <!--  起始位置 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sunmi_20px"
                android:text="@string/start_location_text"
                android:textColor="@color/majorTextColor"
                android:textSize="@dimen/sunmi_24ps" />

            <EditText
                android:id="@+id/start_location_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sunmi_88px"
                android:layout_marginTop="@dimen/sunmi_10px"
                android:background="@drawable/btn_stoke_shape"
                android:ellipsize="end"
                android:gravity="center|left"
                android:hint="@string/edit_start_location_text"
                android:inputType="number"
                android:paddingLeft="@dimen/sunmi_24px"
                android:paddingRight="@dimen/sunmi_24px"
                android:singleLine="true"
                android:text="@={vm.startLocation}"
                android:textColor="@color/majorTextColor"
                android:textSize="@dimen/sunmi_28ps" />
            <!-- 数据长度 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sunmi_20px"
                android:text="@string/data_length_text"
                android:textColor="@color/majorTextColor"
                android:textSize="@dimen/sunmi_24ps" />

            <EditText
                android:id="@+id/data_length_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sunmi_88px"
                android:layout_marginTop="@dimen/sunmi_10px"
                android:background="@drawable/btn_stoke_shape"
                android:ellipsize="end"
                android:gravity="center|left"
                android:hint="@string/edit_data_length_text"
                android:inputType="number"
                android:paddingLeft="@dimen/sunmi_24px"
                android:paddingRight="@dimen/sunmi_24px"
                android:singleLine="true"
                android:text="@={vm.dataLength}"
                android:textColor="@color/majorTextColor"
                android:textSize="@dimen/sunmi_28ps" />
            <!-- data -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sunmi_20px"
                android:text="@string/data_text"
                android:textColor="@color/majorTextColor"
                android:textSize="@dimen/sunmi_24ps" />

            <EditText
                android:id="@+id/data_content_tv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sunmi_88px"
                android:layout_marginTop="@dimen/sunmi_10px"
                android:background="@drawable/btn_stoke_shape"
                android:ellipsize="end"
                android:gravity="center|left"
                android:paddingLeft="@dimen/sunmi_24px"
                android:paddingRight="@dimen/sunmi_24px"
                android:singleLine="true"
                android:text="@={vm.dataInfo}"
                android:textColor="@color/majorTextColor"
                android:textSize="@dimen/sunmi_28ps" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sunmi_88px"
                android:layout_marginTop="@dimen/sunmi_20px"
                android:layout_marginBottom="@dimen/sunmi_20px"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/sunmi_24px"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:onClick="@{()->vm.onReadClick()}"
                    android:text="@string/read_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sunmi_32ps"
                    sunmi:outline="@{`10`}" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:onClick="@{()->vm.onWriteClick()}"
                    android:text="@string/write_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sunmi_32ps"
                    sunmi:outline="@{`10`}" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>